# hbbft

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md  TODO  build.rs  ci.sh  deploy_rsa.enc
examples/: README.md  consensus-node.rs  run-consensus-nodes.sh  simulation.rs
examples/network/: commst.rs  connection.rs  messaging.rs  mod.rs  node.rs
hbbft_testing/: Cargo.toml
hbbft_testing/src/: adversary.rs  err.rs  lib.rs  proptest.rs  util_tests.rs
proto/: message.proto
src/: agreement.rs  broadcast.rs  coin.rs  common_coin.rs  common_subset.rs  commst.rs  connection.rs  dynamic_honey_badger.rs  errors.rs  fault_log.rs  fmt.rs  honey_badger.rs  lib.rs  messaging.rs  network_info.rs  node.rs  proto_io.rs  queue.rs  queueing_honey_badger.rs  stream_io.rs  subset.rs  sync_key_gen.rs  task.rs  threshold_decrypt.rs  threshold_decryption.rs  threshold_sign.rs  traits.rs  transaction_queue.rs  util.rs
src/agreement/: agreement.rs  bin_values.rs  mod.rs  sbv_broadcast.rs
src/binary_agreement/: binary_agreement.rs  bool_multimap.rs  bool_set.rs  mod.rs  sbv_broadcast.rs
src/broadcast/: broadcast.rs  error.rs  merkle.rs  message.rs  mod.rs  stage.rs
src/crypto/: error.rs  into_fr.rs  mod.rs  poly.rs  protobuf_impl.rs  serde_impl.rs
src/dynamic_honey_badger/: batch.rs  builder.rs  change.rs  dynamic_honey_badger.rs  err.rs  error.rs  mod.rs  sender_queueable.rs  votes.rs
src/honey_badger/: batch.rs  builder.rs  epoch_state.rs  error.rs  honey_badger.rs  message.rs  mod.rs  params.rs  sender_queueable.rs
src/proto/: message.rs  mod.rs
src/queueing_honey_badger/: mod.rs  sender_queueable.rs
src/sender_queue/: dynamic_honey_badger.rs  error.rs  honey_badger.rs  message.rs  mod.rs  queueing_honey_badger.rs
src/subset/: error.rs  message.rs  mod.rs  proposal_state.rs  subset.rs
tests/: README.md  agreement.rs  binary_agreement.rs  binary_agreement_mitm.rs  broadcast.rs  broadcast_new.rs  coin.rs  common_coin.rs  common_subset.rs  dynamic_honey_badger.rs  honey_badger.rs  honey_badger_new.rs  net_dynamic_hb.proptest-regressions  net_dynamic_hb.rs  net_util.proptest-regressions  net_util.rs  netsim.rs  node_comms.rs  queueing_honey_badger.rs  remove_me.rs  subset.rs  sync_key_gen.rs  threshold_sign.rs
tests/net/: adversary.rs  choose_subset.rs  err.rs  macros.rs  mod.rs  proptest.rs  types.rs  util.rs
tests/network/: mod.rs
tests/node_comms/: mod.rs
tests/util/: mod.rs
