[package]
name = "hbbft"
version = "0.1.0"
authors = [
    "Vladimir Komendantskiy <komendantsky@gmail.com>",
    "Andreas Fackler <AndreasFackler@gmx.de>",
    "Peter van Nostrand <jnz@riseup.net>",
    "Andrew Gross <andogro@gmail.com>",
    "Nick Sanders <nsan1129@gmail.com>",
    "Marc Brinkmann <git@marcbrinkmann.de>",
]
categories = ["algorithms", "asynchronous", "cryptography", "network-programming"]
keywords = ["consensus", "asynchronous", "threshold"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/poanetwork/hbbft"
description = "The Honey Badger of Byzantine Fault Tolerant Consensus Protocols"
edition = "2018"

[badges]
travis-ci = { repository = "poanetwork/hbbft" }

[dependencies]
bincode = "1.0.0"
byteorder = "1.2.3"
derivative = "1.0.1"
env_logger = "0.5.10"
failure = "0.1"
hex_fmt = "0.2"
init_with = "1.1.0"
log = "0.4.1"
rand = "0.4.2"
rand_derive = "0.3.1"
reed-solomon-erasure = "3.1.1"
serde = "1.0.55"
serde_derive = "1.0.55"
threshold_crypto = "0.2.1"
tiny-keccak = "1.4"

[dev-dependencies]
colored = "1.6"
crossbeam = "0.5"
crossbeam-channel = "0.3"
docopt = "1.0"
itertools = "0.7"
serde_derive = "1.0.55"
signifix = "0.9"
proptest = "0.8.7"
# Note: `rand_core` is solely used for the randomness adapter in `net_utils.rs`
#       tests and should be removed as soon as a migration path to rand 0.5
#       appears.
rand_core = "0.2.1"
integer-sqrt = "0.1.1"

[[example]]
name = "consensus-node"

[[example]]
name = "simulation"

# This will turn on overflow checks in `cargo test --release` and
# `cargo bench`. Dependencies will not be affected, as they use the
# `[profile.release]` block in both cases.
[profile.bench]
overflow-checks = true

[features]
use-insecure-test-only-mock-crypto = ["threshold_crypto/use-insecure-test-only-mock-crypto"]
# TODO: Remove this feature once https://github.com/darrenldl/reed-solomon-erasure/issues/28 is
#       resolved.
no-simd = ["reed-solomon-erasure/pure-rust"]
