[package]
name = "hbbft"
version = "0.1.1"
authors = [
    "Vladimir Komendantskiy <komendantsky@gmail.com>",
    "Andreas Fackler <AndreasFackler@gmx.de>",
    "Peter van Nostrand <jnz@riseup.net>",
    "Andrew Gross <andogro@gmail.com>",
    "Nick Sanders <nsan1129@gmail.com>",
    "Marc Brinkmann <git@marcbrinkmann.de>",
]
categories = ["algorithms", "asynchronous", "cryptography", "network-programming"]
keywords = ["consensus", "asynchronous", "threshold"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/poanetwork/hbbft"
description = "The Honey Badger of Byzantine Fault Tolerant Consensus Protocols"
edition = "2018"

[badges]
travis-ci = { repository = "poanetwork/hbbft" }

[dependencies]
bincode = "1.1.2"
byteorder = "1.3.1"
derivative = "1.0.2"
env_logger = "0.6.1"
failure = "0.1.5"
hex_fmt = "0.3"
init_with = "1.1.0"
log = "0.4.6"
rand = "0.6.5"
rand_derive = "0.5.0"
reed-solomon-erasure = "3.1.1"
serde = { version = "1.0.89", features = ["derive"] }
threshold_crypto = "0.3.1"
tiny-keccak = "1.4"

[dev-dependencies]
colored = "1.7"
crossbeam = "0.7.1"
crossbeam-channel = "0.3"
docopt = "1.0"
hbbft_testing = { path = "hbbft_testing" }
itertools = "0.8.0"
signifix = "0.10.0"
proptest = "0.9.2"

[[example]]
name = "consensus-node"

[[example]]
name = "simulation"

# This will turn on overflow checks in `cargo test --release` and
# `cargo bench`. Dependencies will not be affected, as they use the
# `[profile.release]` block in both cases.
[profile.bench]
overflow-checks = true

[features]
use-insecure-test-only-mock-crypto = ["threshold_crypto/use-insecure-test-only-mock-crypto"]
# TODO: Remove this feature once https://github.com/darrenldl/reed-solomon-erasure/issues/28 is
#       resolved.
no-simd = ["reed-solomon-erasure/pure-rust"]
