[package]
name = "hbbft_testing"
version = "0.1.0"
authors = [
    "Vladimir Komendantskiy <komendantsky@gmail.com>",
    "Andreas Fackler <AndreasFackler@gmx.de>",
    "Peter van Nostrand <jnz@riseup.net>",
    "Andrew Gross <andogro@gmail.com>",
    "Nick Sanders <nsan1129@gmail.com>",
    "Marc Brinkmann <git@marcbrinkmann.de>",
    "David Forstenlechner <dforsten@gmail.com>",
]
categories = ["algorithms", "asynchronous", "cryptography", "network-programming"]
keywords = ["consensus", "asynchronous", "threshold"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/poanetwork/hbbft"
description = "Utilities for simulating and testing hbbft-based networks."
edition = "2018"

[badges]
travis-ci = { repository = "poanetwork/hbbft" }

[dependencies]
failure = "0.1.6"
hbbft = { path = ".." }
integer-sqrt = "0.1.2"
proptest = "0.9.4"
rand = "0.6.5"
rand_xorshift = "0.1.1"
threshold_crypto = { rev = "624eeee", git = "https://github.com/poanetwork/threshold_crypto" }

[features]
use-insecure-test-only-mock-crypto = ["hbbft/use-insecure-test-only-mock-crypto"]
