[package]
name = "hbbft_testing"
version = "0.2.0"
authors = [
    "Vladimir Komendantskiy <komendantsky@gmail.com>",
    "Andreas Fackler <AndreasFackler@gmx.de>",
    "Peter van Nostrand <jnz@riseup.net>",
    "Andrew Gross <andogro@gmail.com>",
    "Nick Sanders <nsan1129@gmail.com>",
    "Marc Brinkmann <git@marcbrinkmann.de>",
    "David Forstenlechner <dforsten@gmail.com>",
]
categories = ["algorithms", "asynchronous", "cryptography", "network-programming"]
keywords = ["consensus", "asynchronous", "threshold"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/poanetwork/hbbft"
description = "Utilities for simulating and testing hbbft-based networks."
edition = "2018"

[badges]
travis-ci = { repository = "poanetwork/hbbft" }

[dependencies]
failure = "0.1.6"
hbbft = { path = ".." }
integer-sqrt = "0.1.2"
# TODO: Update once there is a release that uses rand 0.7.
proptest = { rev = "2f5062a", git = "https://github.com/AltSysrq/proptest" }
rand = "0.7.3"
rand_xorshift = "0.2.0"
# TODO: Version 0.4.0
threshold_crypto = { rev = "d4a500ce75002fca761c88adc7f4f9b28fded987", git = "https://github.com/poanetwork/threshold_crypto" }

[features]
use-insecure-test-only-mock-crypto = ["hbbft/use-insecure-test-only-mock-crypto"]
